[gd_scene load_steps=6 format=3 uid="uid://y6palycxok7r"]

[ext_resource type="Texture2D" uid="uid://c3rx8w1ng1jhw" path="res://icon.svg" id="1_0ri43"]
[ext_resource type="Script" path="res://Attacking/enemy.gd" id="1_4r6j8"]
[ext_resource type="Script" path="res://Attacking/HurtBox.gd" id="1_vf2el"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g52ew"]
size = Vector2(32, 32)

[sub_resource type="CircleShape2D" id="CircleShape2D_x2c25"]
radius = 16.0

[node name="Enemy1" type="CharacterBody2D"]
z_index = 1
collision_layer = 2
motion_mode = 1
slide_on_ceiling = false
script = ExtResource("1_4r6j8")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-3.57628e-07, 0)
scale = Vector2(0.25, 0.25)
texture = ExtResource("1_0ri43")

[node name="HurtBox" type="Area2D" parent="."]
script = ExtResource("1_vf2el")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource("RectangleShape2D_g52ew")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_x2c25")

[node name="ShipDetection" type="Node2D" parent="."]

[node name="RayCast2D1" type="RayCast2D" parent="ShipDetection"]
position = Vector2(0, 18)
target_position = Vector2(0, 8)
collision_mask = 4
hit_from_inside = true
collide_with_areas = true
collide_with_bodies = false

[node name="RayCast2D2" type="RayCast2D" parent="ShipDetection"]
position = Vector2(18, 0)
target_position = Vector2(8, 0)
collision_mask = 4
hit_from_inside = true
collide_with_areas = true
collide_with_bodies = false

[node name="RayCast2D3" type="RayCast2D" parent="ShipDetection"]
position = Vector2(0, -18)
target_position = Vector2(0, -8)
collision_mask = 4
hit_from_inside = true
collide_with_areas = true
collide_with_bodies = false

[node name="RayCast2D4" type="RayCast2D" parent="ShipDetection"]
position = Vector2(-18, 0)
target_position = Vector2(-8, 0)
collision_mask = 4
hit_from_inside = true
collide_with_areas = true
collide_with_bodies = false

[node name="ClosestRay" type="Node2D" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="ClosestRay"]
target_position = Vector2(0, 300)
collision_mask = 4
collide_with_areas = true
collide_with_bodies = false

[node name="RayCast2D2" type="RayCast2D" parent="ClosestRay"]
rotation = 0.785398
target_position = Vector2(0, 300)
collision_mask = 4
collide_with_areas = true
collide_with_bodies = false

[node name="RayCast2D3" type="RayCast2D" parent="ClosestRay"]
rotation = 1.5708
target_position = Vector2(0, 300)
collision_mask = 4
collide_with_areas = true
collide_with_bodies = false

[node name="RayCast2D4" type="RayCast2D" parent="ClosestRay"]
rotation = 2.35619
target_position = Vector2(0, 300)
collision_mask = 4
collide_with_areas = true
collide_with_bodies = false

[node name="RayCast2D5" type="RayCast2D" parent="ClosestRay"]
rotation = 3.14159
target_position = Vector2(0, 300)
collision_mask = 4
collide_with_areas = true
collide_with_bodies = false

[node name="RayCast2D6" type="RayCast2D" parent="ClosestRay"]
rotation = 3.92699
target_position = Vector2(0, 300)
collision_mask = 4
collide_with_areas = true
collide_with_bodies = false

[node name="RayCast2D7" type="RayCast2D" parent="ClosestRay"]
rotation = 4.71239
target_position = Vector2(0, 300)
collision_mask = 4
collide_with_areas = true
collide_with_bodies = false

[node name="RayCast2D8" type="RayCast2D" parent="ClosestRay"]
rotation = 5.49779
target_position = Vector2(0, 300)
collision_mask = 4
collide_with_areas = true
collide_with_bodies = false

[node name="WanderTimer" type="Timer" parent="."]

[connection signal="timeout" from="WanderTimer" to="." method="_on_wander_timer_timeout"]
